# server-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  diesel.toml  docker-compose.dev.yml
migrations/2025-03-31-114945_create_tables/: down.sql  up.sql
migrations/2025-04-01-160623_add_auth_tables/: up.sql
migrations/2025-05-09-194111_full-initial-setup/: down.sql  up.sql
src/: main.rs  models.rs  protobuf.rs  schema.rs
src/I_LOVE_PROTOBUF/: mod.rs  proto.rs
src/db/: models.rs  schema.rs
