[package]
name = "cheddar-server"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "3.7.2"
protoc-bin-vendored = "3.1.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
diesel = { version = "2.2.0", features = ["postgres", "serde_json", "chrono"] }
dotenvy = "0.15.7"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde_json = "1.0.140"
chrono = "0.4.41"

[build-dependencies]
protobuf-codegen = "3.7.2"
protobuf = "3.7.2"
protoc-bin-vendored = "3.1.0"
walkdir = "2.5.0"
